--- a/Search/Search/Modules/Search/SearchCell/SearchCell.xib
+++ b/Search/Search/Modules/Search/SearchCell/SearchCell.xib
@@ -5,79 +5,81 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="SearchCell" customModule="Search" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="394" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="320" id="KGk-i7-Jjw" customClass="SearchCell" customModule="Search" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="441" height="255"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="394" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="441" height="255"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0vi-HG-JFO">
-                        <rect key="frame" x="0.0" y="0.0" width="394" height="80"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Dkt-af-I9y">
+                        <rect key="frame" x="32" y="16" width="377" height="223"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="generic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LWJ-AE-X6F">
-                                <rect key="frame" x="20" y="10" width="66" height="60"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tD0-Ev-BKj">
+                                <rect key="frame" x="0.0" y="66.666666666666671" width="90" height="90.000000000000014"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="CbE-3W-UJe"/>
-                                    <constraint firstAttribute="width" secondItem="LWJ-AE-X6F" secondAttribute="height" multiplier="54:49" id="En3-ks-c3t"/>
+                                    <constraint firstAttribute="height" constant="90" id="WLa-nj-C4E"/>
+                                    <constraint firstAttribute="width" secondItem="tD0-Ev-BKj" secondAttribute="height" multiplier="1:1" id="sEz-2w-byh"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="BCD-Uh-xn2">
-                                <rect key="frame" x="94" y="10" width="280" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tsO-XT-vYY">
+                                <rect key="frame" x="106" y="89" width="271" height="45"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="foo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5O-EZ-f4y">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZOW-Dp-QuN">
-                                        <rect key="frame" x="0.0" y="30" width="280" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fool2fish" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W49-Zt-vOn">
+                                        <rect key="frame" x="0.0" y="0.0" width="271" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZI-4t-p91">
+                                        <rect key="frame" x="0.0" y="25" width="271" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="pzM-cN-faP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </label>
                                 </subviews>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="LWJ-AE-X6F" firstAttribute="leading" secondItem="0vi-HG-JFO" secondAttribute="leading" constant="20" symbolic="YES" id="Cf4-Is-6OU"/>
-                            <constraint firstItem="BCD-Uh-xn2" firstAttribute="leading" secondItem="LWJ-AE-X6F" secondAttribute="trailing" constant="8" symbolic="YES" id="H4h-Tl-rPL"/>
-                            <constraint firstAttribute="trailing" secondItem="BCD-Uh-xn2" secondAttribute="trailing" constant="20" symbolic="YES" id="HBr-i2-vTc"/>
-                            <constraint firstItem="LWJ-AE-X6F" firstAttribute="centerY" secondItem="0vi-HG-JFO" secondAttribute="centerY" id="I3N-Bw-ABP"/>
-                            <constraint firstItem="BCD-Uh-xn2" firstAttribute="bottom" secondItem="LWJ-AE-X6F" secondAttribute="bottom" id="Jeu-Gt-ZpS"/>
-                            <constraint firstItem="BCD-Uh-xn2" firstAttribute="top" secondItem="LWJ-AE-X6F" secondAttribute="top" id="ig8-4p-tYh"/>
-                            <constraint firstAttribute="height" constant="80" id="zuC-Tv-ExS"/>
-                        </constraints>
-                    </view>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                        </userDefinedRuntimeAttributes>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0vi-HG-JFO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="KKD-li-wIC"/>
-                    <constraint firstItem="0vi-HG-JFO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KxH-0s-ty1"/>
-                    <constraint firstAttribute="bottom" secondItem="0vi-HG-JFO" secondAttribute="bottom" id="Q74-c2-pcF"/>
-                    <constraint firstAttribute="trailing" secondItem="0vi-HG-JFO" secondAttribute="trailing" id="Zg1-gc-vts"/>
+                    <constraint firstItem="Dkt-af-I9y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="32" id="O9n-Qc-y54"/>
+                    <constraint firstItem="Dkt-af-I9y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Oc7-nZ-Y5d"/>
+                    <constraint firstAttribute="bottom" secondItem="Dkt-af-I9y" secondAttribute="bottom" constant="16" id="a1C-mm-8Bh"/>
+                    <constraint firstAttribute="trailing" secondItem="Dkt-af-I9y" secondAttribute="trailing" constant="32" id="axx-Ze-IXn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="imageSearch" destination="LWJ-AE-X6F" id="eKm-yr-30B"/>
-                <outlet property="labelLogin" destination="M5O-EZ-f4y" id="tt9-6e-fd5"/>
-                <outlet property="labelType" destination="ZOW-Dp-QuN" id="VaK-b0-fd6"/>
+                <outlet property="imageSearch" destination="tD0-Ev-BKj" id="HLk-jX-d4Y"/>
+                <outlet property="labelLogin" destination="W49-Zt-vOn" id="q08-R8-PvP"/>
+                <outlet property="labelType" destination="mZI-4t-p91" id="daJ-24-fm8"/>
             </connections>
-            <point key="canvasLocation" x="183.20610687022901" y="23.943661971830988"/>
+            <point key="canvasLocation" x="219.08396946564883" y="85.563380281690144"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="generic_placeholder" width="171.66667175292969" height="172"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
